fix: made changes to the scrollbar track style

--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,7 @@ h6 {
   border-width: 4px;
   border-color: transparent;
 }
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 1px grey; 
+}
